# mgk-solana

./: Anchor.toml  DARKPOOL_README.md  README.md  package.json
app/examples/: darkpool-demo.ts
app/src/: darkpool-client.ts
encrypted-perp/: Anchor.toml  README.md
encrypted-perp/encrypted-ixs/src/: darkpool.rs  lib.rs
encrypted-perp/programs/mgk_program/: Cargo.toml
encrypted-perp/programs/mgk_program/src/: darkpool.rs  lib.rs
encrypted-perp/tests/: mgk_program.ts
programs/perpetuals/: Cargo.toml
programs/perpetuals/src/: error.rs  instructions.rs  lib.rs
programs/perpetuals/src/instructions/: settle_dark_pool_trade.rs
programs/perpetuals/src/state/: multisig.rs
ui/: next.config.js  pnpm-lock.yaml  tsconfig.json
ui/src/pages/: _app.tsx
ui/src/utils/: constants.ts
